[gd_scene load_steps=8 format=3 uid="uid://cj0yaeh3yg7tu"]

[ext_resource type="Script" path="res://COGITO/Components/Properties/cogito_properties.gd" id="1_c2uds"]
[ext_resource type="AudioStream" uid="uid://dmt7stt0c6uup" path="res://COGITO/Assets/Audio/524306_bertsz_flame_ignite.ogg" id="2_1flcd"]
[ext_resource type="AudioStream" uid="uid://bxq2chqsr8f7d" path="res://COGITO/Assets/Audio/641848_newlocknew_fireburn.ogg" id="3_f6gd1"]
[ext_resource type="PackedScene" uid="uid://tuqnu6aooyge" path="res://COGITO/Assets/VFX/electricity.tscn" id="4_1ygiu"]
[ext_resource type="PackedScene" uid="uid://bw16ij33r272n" path="res://COGITO/Assets/VFX/small_flames.tscn" id="4_qrjgj"]
[ext_resource type="PackedScene" uid="uid://cfxd8tbelqpj3" path="res://COGITO/Assets/VFX/water_dripping.tscn" id="5_q8wvd"]
[ext_resource type="AudioStream" uid="uid://cae02puivv4dg" path="res://COGITO/Assets/Audio/666290_ekrcoaster_water_hot_surface_short.ogg" id="6_n0f07"]

[node name="CogitoProperties" type="Node3D"]
script = ExtResource("1_c2uds")
reaction_threshold_time = 3.0
spawn_on_ignite = ExtResource("4_qrjgj")
spawn_on_wet = ExtResource("5_q8wvd")
spawn_on_electrified = ExtResource("4_1ygiu")
audio_igniting = ExtResource("2_1flcd")
audio_burning = ExtResource("3_f6gd1")
audio_extinguishing = ExtResource("6_n0f07")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
volume_db = -6.0
max_distance = 30.0
bus = &"SFX"

[node name="DamageTimer" type="Timer" parent="."]
one_shot = true

[node name="ReactionTimer" type="Timer" parent="."]
one_shot = true
